# Legionfall

./: .gitignore  CMakeLists.txt  README.md
shaders/: instanced.vert  triangle.vert  triangle.vert.spv
src/core/: Game.cpp  Game.h  JobSystem.cpp  JobSystem.h
src/platform/: Win32VulkanApp.cpp  main.cpp
src/render/: Renderer.cpp  Renderer.h
